--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@ html,body,#root{
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  border: solid blueviolet;
 }
 
 .partita{
