--- a/src/style/result.css
+++ b/src/style/result.css
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  border: solid green;
+  border-radius: 8px;
   justify-content: center;
   align-items: center;
+  background-color: grey;
+  padding: 5px;
 }
 
 .image {
@@ -20,6 +22,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  column-gap: 5px;
 }
 
 .separatore{
