--- a/src/style/scoreboard.css
+++ b/src/style/scoreboard.css
@@ -4,6 +4,17 @@
     padding: 10px 80px;
     border-radius: 12px;
     display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+}
+
+.results-wrapper{
+    background-color: whitesmoke;
+    box-sizing: border-box;
+    padding: 10px 80px;
+    border-radius: 12px;
+    display: flex;
     flex-direction: column;
     row-gap: 10px;
+
 }
